# jellybean

./: .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile-test-onnx  Dockerfile.dev  Makefile  PLAN.md  README.md  docker-compose.cluster.yml  docv1.md  docv2.md  m.py  model.py  newbench.json  run_parallel_bench.js  stdbench.json  test_model.py  test_onnx.cpp  vcpkg.json
benchmarks/: CMakeLists.txt
cmake/: CPM.cmake  CompilerOptions.cmake  FindLiburing.cmake  Sanitizers.cmake
config/: server.config
configs/: server.config
configs/models/: convnext_tiny_onnx.config  efficientnet_b0_onnx.config  efficientnet_b0_torch.config  resnet50_torch.config  vit_base_patch16_224_onnx.config  vit_base_patch16_224_torch.config
docs/: analysis_results.md  architecture.md  audit_report.md  findings.md  memory_model.md  raft_impl.md  system_flow_and_modules.md  walkthrough.md  wire_protocol.md
include/jellybean/actor/: actor.hpp  mailbox.hpp  registry.hpp
include/jellybean/concurrency/: backoff.hpp  mpmc_queue.hpp  seqlock.hpp  spsc_queue.hpp
include/jellybean/core/: assert.hpp  compiler.hpp  errors.hpp  logging.hpp  platform.hpp  types.hpp
include/jellybean/inference/: backend.hpp  registry.hpp  runtime.hpp  torch_backend.hpp  types.hpp
include/jellybean/memory/: arena.hpp  huge_pages.hpp  slab.hpp
include/jellybean/model/: model_config.hpp  model_executor.hpp  model_metadata.hpp  model_registry.hpp  model_repository.hpp
include/jellybean/net/: async_socket.hpp
include/jellybean/proto/: codec.hpp  frame.hpp  wire.hpp
include/jellybean/reactor/: continuation_pool.hpp  epoll_backend.hpp  future_awaitable.hpp  io_uring_backend.hpp  reactor.hpp  timer_wheel.hpp
include/jellybean/scheduler/: fiber.hpp  scheduler.hpp  work_stealing_deque.hpp
include/jellybean/telemetry/: metrics.hpp  metrics_export.hpp
model_repository_multi/convnext_tiny/: config.pbtxt
model_repository_multi/efficientnet_b0/: config.pbtxt
model_repository_multi/resnet50/: config.pbtxt
model_repository_single/transformer/: config.pbtxt
models/mock_transformer/: config.ini
prompts/: audit.md  new.md
scripts/: run_server.ps1  run_server.sh
src/: CMakeLists.txt
src/actor/: actor.cpp
src/demo/: infer_server_demo.cpp  inference_demo.cpp  runtime_demo.cpp
src/inference/: runtime.cpp  torch_backend.cpp  torch_smoke.cpp
src/memory/: arena.cpp  huge_pages.cpp
src/model/: model_config.cpp  model_executor.cpp  model_registry.cpp  model_repository.cpp
src/net/: async_socket.cpp
src/proto/: codec.cpp
src/reactor/: continuation_pool.cpp  epoll_backend.cpp  io_uring_backend.cpp  reactor.cpp  timer_wheel.cpp
src/scheduler/: scheduler.cpp
src/server/: main.cpp
src/telemetry/: metrics.cpp  metrics_export.cpp
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_actor.cpp  test_arena.cpp  test_mpmc.cpp  test_pedagogical_demo.cpp  test_proto.cpp  test_reactor.cpp  test_scheduler.cpp  test_seqlock.cpp  test_slab.cpp  test_spsc.cpp  test_work_stealing_deque.cpp
tools/: infer_client.py  metrics_client.py
